<resources>
    <string name="app_name">Math Game</string>
    <string name="sudoku">Sudoku</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="two_zero_four_eight">2048</string>
    <string name="abacus">Abacus</string>
    <string name="games_learn_with_fun">Games - Learn with fun</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="percentage">Percentage</string>
    <string name="square_root">Square Root</string>
    <string name="skip_to_next">Skip To Next</string>
    <string name="select_text">Select</string>
    <string name="number_of_variables">Number Of Variables(a,b,c)</string>
    <string name="choose_operations">Choose Operations</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="how_many_question_can_be_skipped">How many question can be skipped ?</string>
    <string name="title">Title</string>
    <string name="none">None</string>
    <string name="per_test">Per Test</string>
    <string name="per_question">Per Question</string>
    <string name="timer_per_question">Timer Per Question</string>
    <string name="enter_settings_title">Enter Settings Title</string>
    <string name="challenge_type">Challenge Type</string>
    <string name="yes_no">Yes/No</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="single_player">Single Player</string>
    <string name="dual_player">Dual Player</string>
    <string name="player_type">Player Type</string>
    <string name="questions">Questions</string>
    <string name="variables">Variables</string>
    <string name="variable">Variable</string>
    <string name="skip_option">Skip Option</string>
    <string name="time_type">Timer Type</string>
    <string name="manual_input">Manual Input</string>
    <string name="timer">Timer</string>
    <string name="total_time">Total Time</string>
    <string name="game_type">Game Type</string>
    <string name="save_settings">Save Settings</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_at_least_choose_one_operation">Please at least choose one operation.</string>
    <string name="operations">Operations</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="test">Test</string>
    <string name="dual">Dual</string>
    <string name="mutltiple">Multiple</string>
    <string name="empty" />
    <string name="settings">Settings</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="cancel_text">Cancel</string>
    <string name="ok_text">OK</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="apply">Apply</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="save_for_future">Save this settings for future.</string>
    <string name="enable_timer">Enable Timer</string>
    <string name="mode_selection_text">Select Mode</string>
    <string name="sign_selection_text">Select Sign</string>
    <string name="turn_selection_text">Select First Turn</string>
    <string name="divider_text">OR</string>
    <string name="player_turn_prompt">Your Turn</string>
    <string name="player_1_turn_prompt">Player 1 Turn</string>
    <string name="player_2_turn_prompt">Player 2 Turn</string>
    <string name="processing_text">Thinking&#8230;</string>
    <string name="next_question">Next Question</string>
    <string name="finish">Finish</string>
    <string name="finish_test">Finish Test</string>
    <string name="message">Message</string>
    <string name="are_you_sure_text">Are you sure?</string>
    <string name="are_you_sure_you_want_to_finish_test">Are you sure you want to finish the Test?</string>
    <string name="home">Home</string>
    <string name="communicate">Communicate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="see_more_apps">See More Apps</string>
    <string name="rate_us">Rate us</string>
    <string name="tutorials">Tutorials</string>
    <string name="report_a_bug">Report A Bug</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="some_error_occurred">Some Error Occurred</string>
    <string name="feedback">FeedBack</string>
    <string name="theme">Theme</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="start_new_game">Start new game</string>
    <string name="undo_last_move">Undo last move</string>
    <string name="next">Next</string>
    <string name="title_activity_game_view" translatable="false">Sudoku</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New Game</string>
    <string name="menu_main">Main Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_highscore">Highscore</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_reset">Reset Board</string>
    <string name="menu_continue_game">Continue Game</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="generating">Generating new level in the background&#8230;</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_group_highlight_selection">Selection highlight</string>
    <string name="pref_highlight_connected">Connected Fields</string>
    <string name="pref_group_highlight_value">Value highlight</string>
    <string name="pref_highlight_vals">Same values</string>
    <string name="pref_highlight_notes">Notes</string>
    <string name="pref_header_game">Game</string>
    <string name="pref_group_game">Game settings</string>
    <string name="pref_symbols">Symbols</string>
    <string name="pref_automatic_note_deletion">Note deletion</string>
    <string name="pref_automatic_note_deletion_summary">Automatically remove notes when setting values on connected cells</string>
    <string name="pref_timer_reset">Timer Reset</string>
    <string name="pref_timer_reset_summary">Also reset the timer, when resetting the game board.</string>
    <string name="app_name_long" translatable="false">Privacy Friendly Sudoku</string>
    <string name="version_number">Version:</string>
    <string name="about_author">Authors:</string>
    <string name="about_author_names" translatable="false">Christopher Beckmann, Timm Lippert</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-sudoku">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="about_qqwing">This application uses a modified version of QQWing v1.3.4</string>
    <string name="about_qqwingLink" translatable="false"><a href="http://qqwing.com/download.html">http://qqwing.com/</a></string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_moderate">Moderate</string>
    <string name="difficulty_hard">Hard</string>
    <string name="Sudoku" translatable="false">Sudoku</string>
    <string name="gametype_default_9x9" translatable="false">Sudoku 9x9</string>
    <string name="gametype_default_6x6" translatable="false">Sudoku 6x6</string>
    <string name="gametype_unspecified">Unspecified</string>
    <string name="gametype_default_12x12" translatable="false">Sudoku 12x12</string>
    <string name="gametype_x_9x9" translatable="false">X Sudoku 9x9</string>
    <string name="gametype_hyper_9x9" translatable="false">Hyper Sudoku 9x9</string>
    <string name="hint_usage">Select a valid field and then press the hint button to reveal the solution.</string>
    <string name="hint_confirmation">Are you sure you want to use this hint? When using hints, you will not be able to achieve a personal best time.</string>
    <string name="hint_confirmation_confirm">Use</string>
    <string name="reset_confirmation">Are you sure you want to reset the game board?</string>
    <string name="reset_confirmation_confirm">Reset</string>
    <string name="loadgame_delete_confirmation">Are you sure you want to delete this save?</string>
    <string name="loadgame_delete_confirm">Delete</string>
    <string name="number_of_hints"># used hints:</string>
    <string name="number_of_games"># completed games:</string>
    <string name="total_of_time">Total time played:</string>
    <string name="average_time">Ø-time:</string>
    <string name="min_time">Best time:</string>
    <string name="reset_stats">Reset All</string>
    <string name="win_text">Congratulations!</string>
    <string name="win_button_text">Continue</string>
    <string name="title_activity_help">Help</string>
    <string name="win_time">Time:</string>
    <string name="win_hint">Hints:</string>
    <string name="win_show_game">Show gamefield</string>
    <string name="win_best_time">New record!</string>
    <string name="help_keyboard">Keyboard</string>
    <string name="help_keyhighlighted_summary">Indicates that the value is selected. Values are set directly when touching fields in this mode, without selecting the field.</string>
    <string name="help_keyhighlighted_yellow_summary">Indicates that the correct number of values for this number have been placed.</string>
    <string name="help_do">Do button</string>
    <string name="help_do_summary">Redoes the last undone action</string>
    <string name="help_undo">Undo button</string>
    <string name="help_undo_summary">Undoes the last action</string>
    <string name="help_hint">Hint button</string>
    <string name="help_hint_summary">Unveals the selected field\nWarning: When used, the current game can not count towards a new best time.</string>
    <string name="help_delete">Delete button</string>
    <string name="help_delete_summary">Deletes a selected field</string>
    <string name="help_notes">Note toggle button</string>
    <string name="help_notes_summary">Toggles if numbers should be set as notes or as values in a field</string>
    <string name="help_privacyInfo">Privacy Info</string>
    <string name="help_permissions">Permissions</string>
    <string name="help_permissions_summary">Privacy Friendly Sudoku does not use any permissions.</string>
    <string name="okay">Okay</string>
    <string name="difficulty_challenge">Challenge</string>
    <string name="pref_highlightInputError" translatable="false">Highlight input mistakes</string>
    <string name="pref_keep_screen_on">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Don\'t turn the screen off while playing</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Welcome to Privacy Friendly Sudoku!</string>
    <string name="career_mode">Career Mode</string>
</resources>