<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/vwShadow"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/shadow_gradient" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnSignIn"
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_carrier"
                    android:drawableLeft="@drawable/ic_carrier"
                    android:text="@string/career_mode" />

                <TextView
                    android:id="@+id/tvCustomMode"
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_custom_mode"
                    android:drawableLeft="@drawable/ic_custom_mode"
                    android:text="@string/custom_mode" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvBeginnerLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beginner_level"
                android:textColor="@color/black_80"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAddition"
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_add"
                    android:drawableLeft="@drawable/ic_add"
                    android:text="@string/addition" />

                <TextView
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_subtract"
                    android:drawableLeft="@drawable/ic_subtract"
                    android:text="@string/subtraction" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_multiply"
                    android:drawableLeft="@drawable/ic_multiply"
                    android:text="@string/multiplication" />

                <TextView
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_divide"
                    android:drawableLeft="@drawable/ic_divide"
                    android:text="@string/division" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_modules"
                    android:drawableLeft="@drawable/ic_modules"
                    android:text="@string/percentage" />

                <TextView
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_square_root"
                    android:drawableLeft="@drawable/ic_square_root"
                    android:text="@string/square_root" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvGames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/games_learn_with_fun"
                android:textColor="@color/black_80"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_abacus"
                    android:drawableLeft="@drawable/ic_abacus"
                    android:text="@string/abacus" />

                <TextView
                    style="@style/home_btn_style"
                    android:drawableStart="@drawable/ic_2048"
                    android:drawableLeft="@drawable/ic_2048"
                    android:text="@string/two_zero_four_eight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/home_btn_style"
                    android:background="@drawable/app_button_background"
                    android:drawableStart="@drawable/ic_ttt"
                    android:drawableLeft="@drawable/ic_ttt"
                    android:text="@string/tic_tac_toe" />

                <TextView
                    style="@style/home_btn_style"
                    android:background="@drawable/app_button_background"
                    android:drawableStart="@drawable/ic_sudoku"
                    android:drawableLeft="@drawable/ic_sudoku"
                    android:text="@string/sudoku" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>