<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="@dimen/spacing_5"
    app:cardElevation="@dimen/spacing_5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llTopTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextAppearance.Regular"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                tools:text="Custom Mode 1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTopTitle"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/ivPlayerType"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    style="@style/item_custom_mode_label"
                    android:text="@string/questions" />

                <TextView
                    style="@style/item_custom_mode_label"
                    android:text="@string/variable" />

                <TextView
                    style="@style/item_custom_mode_label"
                    android:text="@string/skip_option" />

                <TextView
                    style="@style/item_custom_mode_label"
                    android:text="@string/challenge_type" />

                <TextView
                    style="@style/item_custom_mode_label"
                    android:text="@string/time_type" />


                <TextView
                    style="@style/item_custom_mode_label"
                    android:text="@string/total_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView style="@style/item_custom_mode_value" />
                <TextView style="@style/item_custom_mode_value" />
                <TextView style="@style/item_custom_mode_value" />
                <TextView style="@style/item_custom_mode_value" />
                <TextView style="@style/item_custom_mode_value" />
                <TextView style="@style/item_custom_mode_value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:orientation="vertical">

                <TextView
                    style="@style/item_custom_mode_value"
                    android:text="10" />

                <TextView
                    style="@style/item_custom_mode_value"
                    android:text="10" />

                <TextView
                    style="@style/item_custom_mode_value"
                    android:text="3" />

                <TextView
                    style="@style/item_custom_mode_value"
                    android:text="@string/muliple_choice" />

                <TextView
                    style="@style/item_custom_mode_value"
                    android:text="@string/per_question" />

                <TextView
                    style="@style/item_custom_mode_value"
                    android:text="01:40" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivPlayerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_dual_player"
            android:tint="@color/colorPrimary" />

    </RelativeLayout>
</android.support.v7.widget.CardView>