<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_back" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_toEndOf="@+id/ivBack"
                android:text="@string/app_name"
                android:textAppearance="@style/CustomTextAppearance.Regular"
                android:textColor="@color/white_100"
                android:textSize="@dimen/text_size_large_i" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivSettings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_settings"
                android:tint="@color/white_100" />
        </RelativeLayout>

        <View
            android:id="@+id/vwShadow"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/shadow_gradient" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_theme_color"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvLearn"
                    style="@style/home_btn_card_style"
                    android:layout_marginEnd="@dimen/_10dp">

                    <TextView
                        style="@style/home_btn_style"
                        android:drawableTop="@drawable/ic_practice"
                        android:text="@string/learn" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvPractice"
                    style="@style/home_btn_card_style">

                    <TextView
                        android:id="@+id/tvDivision"
                        style="@style/home_btn_style"
                        android:drawableTop="@drawable/ic_multiple"
                        android:text="@string/practice" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvTest"
                    style="@style/home_btn_card_style"
                    android:layout_marginEnd="@dimen/_10dp">

                    <TextView
                        style="@style/home_btn_style"
                        android:drawableTop="@drawable/ic_test"
                        android:text="@string/test" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvDual"
                    style="@style/home_btn_card_style">

                    <TextView
                        style="@style/home_btn_style"
                        android:drawableTop="@drawable/ic_dual"
                        android:text="@string/dual" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvMultiple"
                    style="@style/home_btn_card_style"
                    android:layout_marginEnd="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tvMultipleQuestions"
                        style="@style/home_btn_style"
                        android:drawableTop="@drawable/ic_multiple"
                        android:text="@string/mutltiple" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvYesNo"
                    style="@style/home_btn_card_style">

                    <TextView
                        style="@style/home_btn_style"
                        android:drawableTop="@drawable/ic_yes_no"
                        android:text="@string/yes_no" />
                </android.support.v7.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>